# rustify_store

./: Cargo.toml  README.md
src/: app_state.rs  auth.rs  db.rs  jwt.rs  lib.rs  main.rs  server.rs
src/controllers/: mod.rs  order_controller.rs  order_items_controller.rs  payment_controller.rs  product_controller.rs  user_controller.rs
src/models/: mod.rs  order_items_model.rs  order_items_models.rs  order_model.rs  payment_model.rs  product_models.rs  user.rs  user_model.rs
src/routes/: mod.rs  order_items_routes.rs  order_routes.rs  payment_routes.rs  product_routes.rs  routes.rs  user_routes.rs
