[package]
name = "rustify_store"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
thiserror = "1.0"
bcrypt = "0.12"
jsonwebtoken = "8.1"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "serde",
]
